[package]
authors = ["Navid Fathollahzade <yaa110@gmail.com>", "Pit Kleyersburg <pitkley@googlemail.com>"]
categories = ["api-bindings"]
description = "Rust bindings for iptables"
documentation = "https://github.com/yaa110/rust-iptables"
edition = "2024"
homepage = "https://github.com/yaa110/rust-iptables"
keywords = ["iptables", "netfilter", "bindings"]
license = "MIT"
name = "iptables"
readme = "README.md"
repository = "https://github.com/yaa110/rust-iptables"
version = "0.6.0"

[lib]
name = "iptables"

[dependencies]
lazy_static = "1"
regex = "1"
